# EatonMonitoring

./: CMakeLists.txt  architecture_basic_info  readme_how_to_run
Common/: Constants.hpp
DataModels/: CMakeLists.txt  DataTypes.hpp  DeviceData.cpp  DeviceData.hpp  MeasuredValue.cpp  MeasuredValue.hpp  Units.hpp
Device/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.hpp  Utils.hpp  main.cpp
Device/DataSender/: DataSender.cpp  DataSender.hpp  IDataSender.hpp
Device/MeasurementReader/: DummyMeasurementReader.cpp  DummyMeasurementReader.hpp  IMeasurementReader.hpp  MeasurementReader.cpp  MeasurementReader.hpp
Server/: CMakeLists.txt  ServerManager.cpp  ServerManager.hpp  main.cpp
Server/DataProcessor/: DataProcessor.cpp  DataProcessor.hpp  IDataProcessor.hpp
Server/DataReceiver/: DataReceiver.cpp  DataReceiver.hpp  IDataReceiver.hpp
